# hacker-s-news

./: .gitignore  Design.md  README.md  SYSTEM_FLOW.md  config.toml.example
backend/: Cargo.toml
backend/cortex/: Cargo.toml
backend/cortex/src/: lib.rs  main.rs
backend/cortex/src/core/: aggregator.rs  config.rs  llm.rs  mod.rs  news.rs  news_buffer.rs  nexus.rs  retry.rs  topic_registry.rs  tts.rs
backend/nexus/: Cargo.toml
backend/nexus/src/: lib.rs  main.rs
backend/nexus/src/db/: mod.rs
backend/nexus/src/routes/: admin.rs  auth.rs  dedup.rs  history.rs  internal_api.rs  items.rs  mod.rs  upload.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/components/: LoginModal.tsx
frontend/public/: manifest.json
frontend/src/: types.ts
scripts/: build.sh  deploy.sh  deploy.sh.template  extract_trace.py  install_local_service.sh  migrate_audio.sh  reset_local_content.sh  reset_remote_content.sh  run.sh
tts/: Cargo.toml
tts/src/: lib.rs
