[package]
name = "cortex"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rss = "2.0"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
futures = "0.3"
bytes = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
html2text = "0.13"
regex = "1"
