[package]
name = "cortex"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "multipart",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
feed-rs = "1.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
futures = "0.3"
bytes = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
html2text = "0.16"
regex = "1.10"
sled = "0.34"

candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
tts = { path = "../../tts" }

[features]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
    "tts/metal",
]
